src/tests/cases/snapshots/jett__tests__cases__ui__delete_folder_with_multiple_children-6.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[5]"
---
        32     3                12.0K |  tmp/jett_tests/d lete_folder_with_mu tiple_children                                                                                                  
                                                                                                                                         ─                                                    
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file1                                                                                             
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                         16.0K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file2                                                                                             
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                         16.0K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                         ─                                                    
                                                                                                                                                                                              
                                                                                                                            t    themes, <q> - quit                                           

